Canvas is bigger and has outline

--- a/testCanvas.html
+++ b/testCanvas.html
@@ -9,9 +9,15 @@
 	<button class="clear">Clear</button>
 </body>
 
+<style type="text/css">
+	#canvasDiv {
+		border: 1px solid black;
+	}
+</style>
+
 
 <script type="text/javascript">
-var canvasWidth = 500;
+var canvasWidth = $(window).width();;
 var canvasHeight = 500;
 
 
